# index-3d-cpp

./: .gitignore  CMakeLists.txt  TODO.md
src/: compile_mesh.cxx
src/compile-mesh/: data.hxx  float.hxx  main.cxx  node.cxx  node.hxx  progress.cxx  progress.hxx
src/wavefront-reader/: main.py
